Cleanup configuration and documentation